--- a/META.yml
+++ b/META.yml
@@ -5,6 +5,8 @@ author:
   - 'Yanick Champoux <yanick@cpan.org>'
 abstract: a l33t interpreter
 license: perl
+resources:
+  license: http://dev.perl.org/licenses/
 build_requires:
   Carp: 0
   Class::Std: 0
@@ -15,4 +17,10 @@ provides:
   Language::l33t:
     file: lib/Language/l33t.pm
     version: 0.03
-generated_by: Module::Build version 0.2612
+  Language::l33t::Operators:
+    file: lib/Language/l33t/Operators.pm
+    version: 0.03
+generated_by: Module::Build version 0.280801
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
